Fixing content alignment
Didn't like the centered welcome text, left-aligned now with more padding.

--- a/www-hoopes-io/src/app/components/home/home.component.scss
+++ b/www-hoopes-io/src/app/components/home/home.component.scss
@@ -2,8 +2,7 @@
   font-size: 2rem;
   font-weight: 300;
   line-height: 2.25rem;
-  margin: auto;
-  width: 60%;
+  padding: 0 8px 0 8px;
 
   .row {
     padding: 0 0 16px 0;
@@ -13,7 +12,7 @@
     color: #2980b9;
     font-size: 5rem;
     font-weight: bold;
-    padding: 32px 0 32px 0;
+    padding: 32px 0 16px 0;
   }
   .name {
     color: #2980b9;
